[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DreamBerd"
version = "0.9.9.9.9.9.9.9.9c"
description = "DreamBerd Compiler"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["dream", "berd", "dreamberd"]
dependencies = [
    "requests~=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/TodePond/DreamBerd"
"Source" = "https://github.com/TodePond/DreamBerd"
"Bug Tracker" = "https://github.com/TodePond/DreamBerd/issues"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
