[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DreamBerd"
version = "0.9.9.9.9.9.9.9.9d"
description = "DreamBerd Compiler"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["dream", "berd", "dreamberd", "compiler"]
dependencies = [
    "requests~=2.31.0",
]

[project.optional-dependencies]
dev = [
    "mypy~=1.3.0",              # must match .pre-commit-config.yaml
    "pre-commit",
    "pre-commit-hooks~=4.4.0",  # must match .pre-commit-config.yaml
    "black~=23.3.0",            # must match .pre-commit-config.yaml
    "isort~=5.12.0",            # must match .pre-commit-config.yaml
    "pycln~=2.1.3",             # must match .pre-commit-config.yaml
]

[project.urls]
"Homepage" = "https://github.com/TodePond/DreamBerd"
"Source" = "https://github.com/TodePond/DreamBerd"
"Bug Tracker" = "https://github.com/TodePond/DreamBerd/issues"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79
skip = [".git", ".github", ".venv"]

[tool.pycln]
all = true
disable_all_dunder_policy = true
